--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -14,9 +14,10 @@
               <%= f.text_area :description, class: 'form-control' %>
           </div>
           
+          <%if current_user != nil %>
           <%= f.submit '投稿', class: 'btn btn-black btn-block' %>
-          
           <% end %>
+        <% end %>
       </div> 
     </div>
   </div>
