--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -3,18 +3,18 @@
     <% @favorite_topics.each do |topic| %>
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
-          <div class="topic=index-single">
+          <div class="topic-index-single">
             <h2 class="topic-author">
               <%= topic.user.name %>
             </h2>
             <%= image_tag topic.image.url %>
             <%= image_tag 'icons/comment.png', class: 'topic-index-icon' %>
-            <p class ="topic-text">
+            <p class="topic-text">
               <%= topic.description %>
             </p>
           </div>
-        </div> 
+        </div>
       </div>
-      <% end %>
+    <% end %>
   </div>
 </div>
