--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -9,14 +9,24 @@
             </h2>
             <%= image_tag topic.image.url %>
             <% if !topic.favorite_users.include?(current_user) %>
-            <%= link_to favorites_path(topic_id: topic.id), method: :post do %>
-            <%= image_tag 'icons/heart-black.png', class: 'topic-index-icon' %>
+              <%= link_to favorites_path(topic_id: topic.id), method: :post do %>
+                <%= image_tag 'icons/heart-black.png', class: 'topic-index-icon' %>
+              <% end %>
             <% end %>
+            <%= link_to new_comment_path(topic_id: topic.id) do %>
+              <%= image_tag('icons/comment.png',class: 'topic-index-icon') %>
             <% end %>
-            <%= image_tag 'icons/comment.png', class: 'topic-index-icon' %>
             <p class="topic-text">
               <%= topic.description %>
             </p>
+            <h4>コメント</h4>
+            <% topic.comments.each do |comment| %>
+              <div class = "topic-index-single">
+                <p class ="topic-text">
+                  <%= comment.content %>
+                </p>
+              </div>
+            <% end %>
           </div>
         </div>
       </div>
