--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -130,6 +130,13 @@ h1, h2 {
       width: 35px;
       height: 30px;
       margin-left: 20px;
+      
+    }
+    .index-icon{
+      width: 35px;
+      height: 30px;
+      margin-left: 20px;
+      color: #ff2581;
     }
   }
 }
