--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -12,9 +12,13 @@
               <%= link_to favorites_path(topic_id: topic.id), method: :post do %>
                 <%= image_tag 'icons/heart-black.png', class: 'topic-index-icon' %>
               <% end %>
+             <% else %>
+              <%= link_to favorites_path(topic_id: topic.id), method: :delete do %>
+                <%= image_tag 'icons/heart-black.png', class: 'icon' %>
+              <% end %> 
             <% end %>
             <%= link_to new_comment_path(topic_id: topic.id) do %>
-              <%= image_tag('icons/comment.png',class: 'topic-index-icon') %>
+              <%= image_tag('icons/comment.png',class: 'index-icon') %>
             <% end %>
             <p class="topic-text">
               <%= topic.description %>
