--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -17,6 +17,7 @@
                 <%= image_tag 'icons/heart-black.png', class: 'icon' %>
               <% end %> 
             <% end %>
+            <%=topic.favorite_users.count %>
             <%= link_to new_comment_path(topic_id: topic.id) do %>
               <%= image_tag('icons/comment.png',class: 'index-icon') %>
             <% end %>
