--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,61 +1,66 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Pictgram</title>
+    <title>Soccer</title>
     <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
     <% flash.each do |key, value| %>
-      <div class ="alert alert-<%= key %>" role="aleart"><%= value %></div>
-      <% end %>
-      
-      <nav class="navbar navbar-default navbar-fixed-top navbar-transparent">
-        <div class="container">
-          <%= link_to root_path do %>
+      <div class="alert alert-<%= key %>" role="alert"><%= value %></div>
+    <% end %>
+    
+    <nav class="navbar navbar-default navbar-fixed-top navbar-transparent">
+      <div class="container">
+        <%= link_to root_path do %>
           <span><%= image_tag "icons/logo.png", class: "navbar-brand" %></span>
           <% end %>
           <ul class="nav navbar-nav navbar-right">
             <% if logged_in? %>
             <li>
-              <%= link_to favorites_path  do %>
+              <%= link_to favorites_path do %>
                 <%= image_tag "icons/heart.png" %>
-                <% end %>
+              <% end %>
             </li>
             <li>
               <%= link_to new_topic_path do %>
                 <%= image_tag "icons/camera.png" %>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to logout_path, method: :delete do %>
+                <%= image_tag "icons/logout.png" %>
                 <% end %>
             </li>
             <li>
-              <%= link_to logout_path,method: :delete do %>
-                <image_tag "icons/logout.png" %>
+              <%= link_to edit_user_path(id: [:id]) do %>
+                <%= image_tag 'setting.jpeg' %>
               <% end %>
             </li>
-          <% else %>
-          <li>
-            <%= link_to new_user_path do %>
-              <%= image_tag "icons/register.png" %>
+            <% else %>
+              <li>
+                <%= link_to new_user_path do %>
+                  <%= image_tag "icons/register.png" %>
+                  <% end %>
+              </li>
+              <li>
+                <%= link_to login_path do %>
+                  <%= image_tag "icons/login.png" %>
+                <% end %>
+              </li>
               <% end %>
-          </li>
-          <li>
-            <%= link_to login_path do %>
-              <%= image_tag"icons/login.png" %>
-            <% end %>
-          </li>
-          <% end %>
+            </li>
           </ul>
-          </div>
-      </nav>
+      </div>
+    </nav>
     <%= yield %>
     
     <script>
       $(function(){
-          $(".alert").fadeOut(5000);
+        $(".alert").fadeOut(5000);
       });
     </script>
   </body>
