--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -2,17 +2,13 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <h1 class="text-center">Add Picture</h1>
+                <h1 class="text-center">Topic Edit</h1>
                 <%= form_for @topic do |f| %>
-                <div class="form-group">
-                    <%= f.label :image %>
-                    <%= f.file_field :image %>
-                </div>
                 <div class="form-group">
                     <%= f.label :description %>
                     <%= f.text_area :description, class: 'form-control' %>
                 </div>
-                <%= f.submit '投稿', class: 'btn btn-black btn-block' %>
+                <%= f.submit '編集', class: 'btn btn-black btn-block' %>
                 <% end %>
             </div>
         </div>
