--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -8,30 +8,47 @@
               <%= topic.user.name %>
             </h2>
             <%= image_tag topic.image.url %>
-            <% if !topic.favorite_users.include?(current_user) %>
-              <%= link_to favorites_path(topic_id: topic.id), method: :post do %>
+            <% if !topic.favorite_users.include?(current_user) %> 
+                <%= link_to favorites_path(topic_id: topic.id), method: :post do %>
                 <%= image_tag 'icons/heart-black.png', class: 'topic-index-icon' %>
-              <% end %>
-             <% else %>
-              <%= link_to favorites_path(topic_id: topic.id), method: :delete do %>
-                <%= image_tag 'icons/heart-black.png', class: 'icon' %>
-              <% end %> 
+                <% end %> 
+            <% else %> 
+                <%= link_to favorites_path(topic_id: topic.id), method: :delete do %> 
+                <%= image_tag 'heart.png', class: 'topic-index-icon' %> 
+                <% end %> 
+            <% end %> 
+            <%=topic.favorite_users.count %> 
+            <%= link_to new_comment_path(topic_id: topic.id) do %> 
+                <%= image_tag 'icons/comment.png', class: 'topic-index-icon' %>
             <% end %>
-            <%=topic.favorite_users.count %>
-            <%= link_to new_comment_path(topic_id: topic.id) do %>
-              <%= image_tag('icons/comment.png',class: 'index-icon') %>
+            <% if session[:user_id] == topic.user_id%>
+            <%= link_to edit_topic_path(id: topic.id) do %>
+                <%= image_tag 'setting.jpeg', class: 'topic-index-icon' %>
+            <% end %>
+            <%= link_to topics_path(id: topic.id), method: :delete do %>
+                <%= image_tag 'gomi.jpeg', class: 'topic-index-icon' %>
+            <% end %>
             <% end %>
             <p class="topic-text">
               <%= topic.description %>
             </p>
-            <h4>コメント</h4>
-            <% topic.comments.each do |comment| %>
-              <div class = "topic-index-single">
-                <p class ="topic-text">
-                  <%= comment.content %>
-                </p>
-              </div>
-            <% end %>
+            <h4>コメント</h4> 
+                <% topic.comments.each do |comment| %>
+                  <h5 class="comment-user-name">
+                    <%= comment.user.name %>
+                  </h5>
+                  <p class="topic-text">
+                      <%= comment.content %>
+                  </p>
+                  <% if session[:user_id] == comment.user_id%>
+                  <%= link_to edit_comment_path(id: topic.id) do %>
+                  <%= image_tag 'setting.jpeg', class: 'comment-index-icon' %>
+                  <% end %>
+                  <%= link_to comments_path(id: topic.id), method: :delete do %>
+                  <%= image_tag 'gomi.jpeg', class: 'comment-index-icon' %> 
+                  <% end %>
+                  <% end %>
+                <% end %>
           </div>
         </div>
       </div>
